2011-01-29  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix spurious failures in lflags*.test
	* tests/lflags.test: Remove 'LEX' from the environment, so
	that it won't be erroneously picked up by `make -e'.
	* tests/lflags2.test: Likewise.

2011-01-24  Stefano Lattarini  <stefano.lattarini@gmail.com>

	docs: color-tests issues with parallel make
	* doc/automake.texi (Simple Tests): Document that automatic
	recognition of a capable terminal attached to stdout can fail
	with some make implementation when running in parallel mode,
	thus causing colored test output not to be automatically
	activated when it should.

2011-01-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	tests: avoid instspc.test failures due to make's whitespace trimming
	* tests/instspc.test: Prepend './' when passing the test
	characters, to avoid leading whitespace characters to be trimmed
	from macros set from environment variables.  Fixes testsuite
	failures with HP-UX, IRIX, and Tru64/OSF make.

2011-01-23  Stefano Lattarini  <stefano.lattarini@gmail.com>

	coverage: test semantics of "dummy" per-target flags
	* tests/specflg-dummy.test: New test, ensuring that even "dummy"
	per-target flags triggers the use of renamed objects.
	* tests/Makefile.am (TESTS): Update.
	Suggestion by Ralf Wildenhues.

2011-01-23  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests defs: sanitize IFS
	* tests/defs.in ($IFS): Define to <space>, <tab>, <newline>.
	($sp): New variable, holding a single whitespace character.
	($tab): New variable, holding a tabulation character.
	($nl): New variable, holding a newline character.

2011-01-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	tests: fix VPATH auto-expansion workarounds.
	* tests/parallel-tests8.test, tests/suffix13.test:
	Ensure $< is not surrounded by white space, to prevent Solaris
	make from applying automatic VPATH text expansion.

2011-01-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix spurious failures in yflags*.test