@@ -1,3 +1,12 @@
+2011-02-01  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	coverage: more tests on simple and parallel test drivers
+	* tests/parallel-tests-subdir.test: New test.
+	* tests/check-exported-srcdir.test: Likewise.
+	* tests/check-tests-in-builddir.test: Likewise.
+	* tests/check-tests_environment.test: Likewise.
+	* tests/Makefile.am (TESTS): Update.
+
 2011-01-29  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	tests: fix spurious failures in lflags*.test
